# image-viewer

./: Makefile  README.md  default.nix  image-viewer.cabal  ivie.cabal  stack.yaml
src/: FileList.hs  LoadImage.hs  Main.hs  Shifts.hs
