name:                image-viewer
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/image-viewer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable image-viewer
  other-modules:       LoadImage
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , gtk3 == 0.14.2
                     , glib == 0.13.2.2
                     , directory == 1.2.2.0
                     , transformers == 0.4.2.0
                     , random == 1.1
                     , random-shuffle == 0.0.4
                     , Hclip == 3.0.0.3
                     , text == 1.2.1.3
                     , system-filepath == 0.4.13.4
