name:                ivie
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/image-viewer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable image-viewer
  other-modules:       LoadImage
                     , FileList
                     , Shifts
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , gtk3
                     , glib
                     , directory
                     , transformers
                     , random
                     , random-shuffle
                     , Hclip
                     , text
                     , system-filepath
